# schwarm

./: .env_example  .env_test  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  hello.py  llm_provider.md  minimalism.md  more_serious_readme.md  pyproject.toml  schwarm_events.db  stream_viewer_improvements.md  temporal.md
.docs/: README.md  concepts.md  examples.md  providers.md
.docs/charts/: charts.drawio
.docs/ideas/: ideas.md
diagrams/: diagram.drawio  event_system.md  functional_capabilities.md  provider_hierarchy.md  provider_management.md  request_flow.md  schwarm_architecture.md  web_debug_architecture.md  web_debug_sequence.md
docs/: README.md
docs/diagrams/: component_interactions.md  event_flow.md  implementations.md  package_dependencies.md
docs/prompts/: v0.txt
docs/tools/: pitch.md  poc.md
docs2.0/: COMPARISON.md  REFACTOR.md  REFACTOR_02.md  REFACTOR_03.md  REFACTOR_04.md  REFACTOR_05.md  REFACTOR_06.md  REFACTOR_07.md
examples/: summarizer_example.py
examples/01/: quickie01.py  quickie02.py  quickie03.py  teachings_of_schwarm01.ipynb
examples/01_seo/: app.py
examples/02/: knowledge01.py  selfimprovement01.py
examples/02_researcher/: app.py
examples/04_autogen/: app.py
examples/05_fakeuser_generator/: app.py
examples/06_stephen_king/: app.py
examples/07_kg_import_and_query/: app.py
examples/07_minimal/: app.py  server.py
examples/07_provider/: app.py
examples/07_zep_chat/: app.py
examples/08_temporal/: app.py
ideas/: injection.md  providers.md
notebooks/: schwarm_university_01.ipynb
schwarm/: events.py
src/schwarma-agents/: pyproject.toml
src/schwarma-agents/schwarma_agents/: __init__.py  agent.py  builder.py
src/schwarma-core/: pyproject.toml
src/schwarma-core/schwarma_core/: __init__.py  context.py  events.py  function.py  provider.py
src/schwarma-provider-llm/: pyproject.toml
src/schwarma-provider-llm/schwarma_provider_llm/: __init__.py  provider.py
src/schwarma-telemetry/: pyproject.toml
src/schwarma-telemetry/schwarma_telemetry/: __init__.py  exporter.py
static/: index.html
templates/: demo.html
tests/: conftest.py  test_agent.py  test_budget_provider.py  test_cli.py  test_context.py  test_debug_provider.py  test_event_provider.py  test_events.py  test_function.py  test_lite_llm_provider.py  test_litellm.py  test_llm_provider.py  test_models.py  test_provider.py  test_provider_manager.py  test_schwarm2_telemetry.py  test_sqlite_telemetry_exporter.py  test_stream_manager.py  test_summarize_function.py  test_telemetry_manager.py  test_web_debug_provider.py  test_web_debug_visual.py  test_websocket_client.py  test_websocket_server.py  test_zep_provider.py
(+247 files in other folders)
