[project]
name = "schwarma-agents"
version = "0.1.0"
description = "Agent components for SchwarMA - a modular agent framework"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "schwarma-core>=0.1.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
