[project]
name = "schwarma-provider-llm"
version = "0.1.0"
description = "LLM provider for SchwarMA - a modular agent framework"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "schwarma-core>=0.1.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
